@@ -49,7 +49,8 @@ TESTS :=																\
   test/test-broadcasting.py														\
   test/test-compute-chessboard-corners-parsing.py											\
   test/test-rectification-maps.py													\
-  test/test-save-load-image.py
+  test/test-save-load-image.py \
+  test-worst_direction_stdev.py
 
 # Check the non-canonical problem definitions
 TESTS += test/test-projection-uncertainty.py__--fixed__cam0__--model__opencv4__--Ncameras__1__--reproject-perturbed__cross-reprojection--rrp-Jfp
